# ugnsm

./: .gitignore  CMakeLists.txt  README.md  cleanup_networks.sh  gridmodelmanager.cpp  gridmodelmanager.h  gridviewmanager.cpp  gridviewmanager.h  ledindicator.cpp  ledindicator.h  ledindicatordelegate.cpp  ledindicatordelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  networkdashboard.cpp  networkdashboard.h  networkdashboardmanager.cpp  networkdashboardmanager.h  networkinfo.cpp  networkinfo.h  networkinfomodel.h  networkinfoview.cpp  networkinfoview.h  networkinfoviewmodel.cpp  networkinfoviewmodel.h  networkinfoviewwidget.cpp  networkinfoviewwidget.h  networkmonitor.cpp  networkmonitor.h  qemu-network-tester.sh  qemu_network_tester.sh  resources.qrc  simulate_network_traffic.sh
Core/: CMakeLists.txt  componentregistry.cpp  componentregistry.h  componentsystem.cpp  componentsystem.h  globalmanager.cpp  globalmanager.h
Core/Grid/Managment/: dragmanager.cpp  dragmanager.h  griddatamanager.cpp  griddatamanager.h  gridmanager.cpp  gridmanager.h
Core/Network/Information/: networkinfo.cpp  networkinfo.h  networkinfomodel.cpp  networkinfomodel.h
Core/Network/Monitoring/: networkmonitor.cpp  networkmonitor.h
Core/Network/NetworkSortingStrategies/: inetworksortstrategy.cpp  inetworksortstrategy.h  speedsortstrategy.cpp  speedsortstrategy.h  stabilitysortstrategy.cpp  stabilitysortstrategy.h
Core/Settings/: settingsmanager.cpp  settingsmanager.h
Core/TaskSystem/: atomicmethodtask.cpp  atomicmethodtask.h  methodtask.cpp  methodtask.h  taskscheduler.cpp  taskscheduler.h  taskwrapper.cpp  taskwrapper.h  taskwrapperbase.cpp  taskwrapperbase.h
Core/TaskSystem/Tasks/: atomicmethodtask.h  lambdatask.h  methodtask.h  qtinvoketask.h  taskwrapperbase.h
GridCellWidgets/: gridcellwidget.h  networkinfoviewwidget.cpp  networkinfoviewwidget.h
GridManager/: griddatamanager.cpp  griddatamanager.h  gridmanager.cpp  gridmanager.h  gridviewmanager.cpp
NetworkInformation/: networkinfo.h
Resources/: CMakeLists.txt  resources.qrc  styles.qss
UI/: CMakeLists.txt
UI/Components/DialogWindows/: settingsdialog.cpp  settingsdialog.h
UI/Components/Grid/GridCellWidgets/: gridcellwidget.cpp  gridcellwidget.h  networkinfoviewwidget.cpp  networkinfoviewwidget.h  placeholdercellwidget.cpp  placeholdercellwidget.h
UI/Components/Grid/GridViewManager/: gridviewmanager.cpp  gridviewmanager.h
Utilities/: CMakeLists.txt
Utilities/Delegates/: ledindicatordelegate.cpp
Utilities/Logger/: logger.cpp  logger.h
Utilities/MessageBoxManager/: messageboxmanager.cpp  messageboxmanager.h
Utilities/Parser/: iparser.cpp  iparser.h  networkethernetparser.cpp  networkethernetparser.h
scripts/: cleanup_networks.sh  network_monitor.sh  prepare_guest_image.sh  qemu_network_tester.sh  run_network_test.sh  setup_dependencies.sh  setup_guest_iperf.sh  setup_nat_bridge.sh  simulate_network_traffic.sh  ssh_test.sh
